# agentic-coding

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml
migrations/: 20260303000000_create_updated_at_function.up.sql  20260303000001_create_sessions.up.sql  20260303000002_create_context_history.down.sql  20260303000002_create_context_history.up.sql  20260303000003_add_session_steps.down.sql  20260303000003_add_session_steps.up.sql  20260313000004_create_task_history.down.sql  20260313000004_create_task_history.up.sql
sovereign_brain/: __init__.py  config.py
sovereign_brain/agents/: __init__.py  architect.py  base.py  dev.py  orchestrator.py  reviewer.py  tester.py
sovereign_brain/agents/prompts/: architect.md  architecture_agent.md  dev.md  lint_agent.md  reviewer.md  tester.md
sovereign_brain/db/: connection.py  queries.py
sovereign_brain/mcp/: __main__.py  server.py
tests/unit/: test_agents.py  test_orchestrator_helpers.py  test_orchestrator_models.py  test_prompts.py  test_reviewer_builders.py
