[project]
name = "sovereign-brain"
version = "0.1.0"
description = "Sovereign Engineering Office — Local Multi-Agent Brain via FastMCP + Pydantic AI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0",
    "pydantic-ai[anthropic]>=0.0.14",
    "asyncpg>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "python-ulid>=3.0",
    "uuid7>=0.1",
    "httpx>=0.27",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sovereign_brain"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
